--- a/temp.css
+++ b/temp.css
@@ -53,7 +53,7 @@
         margin: auto;
         margin-top: 100px;
         justify-content: center;
-        max-width: 1000px;
+        max-width: 70%;
     }
     
     .container-info {
@@ -69,8 +69,12 @@
         font-size: 15px;
         font-weight: 600;
         line-height: 1.8;
-        max-width: 500px;
-        max-height: 500px;
+        width: 60%;
+        height: auto;
+    }
+    
+    .text-container-one p {
+        text-align: left;
     }
     
     .splash {
@@ -138,14 +142,14 @@
         padding: 30px;
         outline: none;
         border-radius: 5px;
-        border-width: thick;
+        border-width: thin;
         transition: all 0.5s ease;
     }
     
     .info .input {
         width: 50%;
         float: left;
-        border-width: thick;
+        border-width: thin;
     }
     
     footer {
@@ -179,6 +183,8 @@
     }
     
     #center {
+        display: flex;
+        justify-content: center;
         margin: auto;
     }
     
